# ceng477-hw1

./: .gitignore  CMakeLists.txt  Car.ppm  Car_front.ppm  Makefile  bunny.ppm  ceng477-hw1.sln  ceng477-hw1.vcxproj  ceng477-hw1.vcxproj.filters  collision_object.h  cornellbox_front.ppm  cornellbox_inverse.ppm  cornellbox_top.ppm  geometry.cpp  geometry.d  geometry.h  main  main.cpp  main.d  marbles.ppm  mirror_spheres.ppm  monkey.ppm  parser.cpp  parser.d  parser.h  ppm.cpp  ppm.d  ppm.h  ray_tracer.cpp  ray_tracer.d  ray_tracer.h  raytracer  raytracer.cpp  shading.cpp  shading.d  shading.h  simple.ppm  simple_reflectance.ppm  simple_shading.ppm  stevefront  (+4 more)
inputs/: steve256.xml
